--- a/public/s/viewvote.html
+++ b/public/s/viewvote.html
@@ -54,11 +54,11 @@
     update();
 
 	function update(){
+		$('.tab-content').hide();
 		$.get('/do/s/viewvote?vid=' + vid, function(resObj){
 			var ok = resObj['ok'], msg = resObj['msg'];
 			msg && notify(msg, ok);
 			if (! ok) return window.history.back();
-
 			var vote = resObj['vote'],
 				content = vote['content'],
 				options = vote['options'];
@@ -89,8 +89,8 @@
 			$('.square-count').each(function(i, el) {
 				$(el).css('background-color', colors[i]);
 			});
-
 			$('#chart').drawPieChart(options, colors);
+			$('.tab-content').show();
 		});
 	}
 </script>
