correct: wrong word reference by Jayden's over-copying

--- a/public/a/index.html
+++ b/public/a/index.html
@@ -36,7 +36,7 @@
 							<ul class="nav navbar-nav">
 								<li><a href="#/view">查看讲座</a></li>
 								<li><a href="#/audience">听众列表</a></li>
-								<li><a href="#/share">共享文件</a></li>
+								<li><a href="#/share">文件共享</a></li>
 								<li><a href="#/qna">讲座提问</a></li>
 								<li><a href="#/votes">讲座投票</a></li>
 								<li><a href="#/lotterys">讲座抽奖</a></li>
