--- a/public/a/lotterys.html
+++ b/public/a/lotterys.html
@@ -7,7 +7,7 @@
 
 <div id="main-wrapper">
 	<h1>
-		<i class="glyphicon glyphicon-th"></i>抽奖管理
+		<i class="glyphicon glyphicon-th"></i>讲座抽奖
 	</h1>
 	<table id="table-lotterylist" class="table table-striped">
 		<thead>
