--- a/public/a/qna.html
+++ b/public/a/qna.html
@@ -1,7 +1,7 @@
 ﻿
 <div id="main-wrapper">
 	<h1>
-		<i class="glyphicon glyphicon-question-sign"></i>提问管理
+		<i class="glyphicon glyphicon-question-sign"></i>讲座提问
 	</h1>
 	<form id="form-qna-toggle">
 		<div class="btn-group btn-group-lg">
