--- a/public/a/view.html
+++ b/public/a/view.html
@@ -29,7 +29,7 @@
 			<i class="glyphicon glyphicon-th-list"></i>听众列表
 		</button>
 		<button href="#/share" class="btn btn-default btn-lg btn-block">
-			<i class="glyphicon glyphicon-file"></i>共享文件
+			<i class="glyphicon glyphicon-file"></i>文件共享
 		</button>
 		<button href="#/qna" class="btn btn-default btn-lg btn-block">
 			<i class="glyphicon glyphicon-question-sign"></i>讲座提问
