--- a/public/a/votes.html
+++ b/public/a/votes.html
@@ -7,7 +7,7 @@
 
 <div id="main-wrapper">
 	<h1>
-			<i class="glyphicon glyphicon-list-alt"></i>投票管理
+			<i class="glyphicon glyphicon-list-alt"></i>讲座投票
 	</h1>
 	<table id="table-votelist" class="table table-striped">
 		<thead>
