--- a/public/s/index.html
+++ b/public/s/index.html
@@ -36,7 +36,7 @@
 							<ul class="nav navbar-nav">
 								<li><a href="#/view">查看讲座</a></li>
 								<li><a href="#/audience">听众列表</a></li>
-								<li><a href="#/share">共享文件</a></li>
+								<li><a href="#/share">文件共享</a></li>
 								<li><a href="#/qna">提问管理</a></li>
 								<li><a href="#/votes">投票管理</a></li>
 								<li><a href="#/lotterys">抽奖管理</a></li>
